Fixes scrollbar overlapping content in IE
See https://github.com/twbs/bootstrap/issues/18543.
Fixes #2285.

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -721,3 +721,15 @@ input.ng-invalid {
 [data-rating] {
   color: #ffa500;
 }
+
+
+html {
+  // As a side-effect of setting the @viewport in bootstrap,
+  // IE11 & Edge make the scrollbar overlap the content and automatically hide itself when not in use.
+  // Unfortunately, the auto-showing of the scrollbar is sometimes too sensitive,
+  // thus making it hard to click on stuff near the right edge of the page.
+  // So we add this style to force IE11 & Edge to use a "normal", non-overlapping, non-auto-hiding scrollbar.
+  // See https://github.com/twbs/bootstrap/issues/18543
+  // TODO Remove this if Bootstrap version is >= 4.0.0
+  -ms-overflow-style: scrollbar;
+}
